examples/test/testpolicy4019.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4019
  namespace: namespace498
spec:
  podSelector:
    matchLabels:
      key49: value20
      key41: value31
      key46: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value22
          key12: value32
          key48: value39
